--- a/docstyle.css
+++ b/docstyle.css
@@ -1,11 +1,159 @@
+*{
+    box-sizing: border-box;
+}
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+}
 header{
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 2rem 0;
+    width: 100vw;
+    background-color: white;
 }
-
 header img{
     width: 268px;
     height: 33px;
+}
+a{
+    color: #337ab7;
+    text-decoration: none;
+    background-color: transparent;
+}
+.navBar{
+    display: flex;
+    gap: 10px;
+    font-size: 16px;
+    font-weight: 400;
+}
+.about, .career:hover, .departments:hover {
+    color: #00b39b;
+    text-decoration: none;
+}
+.career, .departments {
+    color: #ababab;
+}
+.section1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 25px;
+}
+.firstLogo{
+    width: 40px;
+    height: 40px;
+}
+.headerP{
+    color: #00b39b;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding-top: 20px;
+    font-size: 30px;
+    font-weight: 300;
+    letter-spacing: 1px;
+    margin-top: 5px;
+}
+.paragraphs{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #747474;
+    width: 100%;
+    font-size: 16px;
+    padding-left: 260px;
+    padding-right: 280px;
+}
+.p1{
+    padding-right: 30px;
+}
+.section2{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+.book1{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 340px;
+    background-color: #00ccb1;
+    border-radius: 10px;
+}
+div{
+    display: block;
+}
+.section2 img{
+    width: 25px;
+    height: auto;
+}
+img{
+    vertical-align: middle;
+}
+.header{
+    font-weight: 300;
+    color: white;
+    font-size: 10px;
+    margin: 6px 0;
+}
+.section6{
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 0.5cm;
+}
+.section6 div{
+    border-radius: 3%;
+    margin: 0.44%;
+}
+.country{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.section7{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.section7 h1{
+    font-size: 25px;
+    color: #333;
+    font-weight: 200;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.section7 button{ 
+    margin-left: 100px;
+    background-color: #3d83df;
+    color: #fff;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-right: 14px;
+    padding-left: 14px;
+    border: white;
+    border-radius: 4px;
+    text-align: center;
+    font-size: 12px;
+    font-weight: 700;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 70px;
+}
+footer{
+    text-align: center;
+    color: #ababab;
+    font-size: 12px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+footer a{
+    text-decoration: none;
+    color: #337ab7;
 }
