--- a/docstyle.css
+++ b/docstyle.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: helvetica, sans-serif;
     font-size: 14px;
 }
 header{
@@ -74,6 +74,8 @@ a{
     justify-content: center;
     align-items: center;
     color: white;
+    gap: 20px;
+    margin-top: 50px;
 }
 .book1{
     display: flex;
@@ -82,13 +84,54 @@ a{
     height: 340px;
     background-color: #00ccb1;
     border-radius: 10px;
+    width: 300px;
+}
+.section2 img{
+    margin-left: 50px;
+    margin-top: 45px;
+}
+h2{
+    font-size: 35px;
+    margin-left: 50px;
+    margin-top: 20px;
+}
+.patient{
+    font-size: 20px;
+    margin-left: 50px;
+    position: relative;
+    top: -25px;
+}
+.choose{
+    margin-left: 50px;
+    position: relative;
+    top: -25px;
+}
+select{
+    border: none;
+    color: white;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.book2{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 340px;
+    background-color: #3d83df;
+    border-radius: 10px;
+    width: 270px;
+}
+.book3{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 340px;
+    background-color: #1b2734;
+    border-radius: 10px;
+    width: 300px;
 }
 div{
     display: block;
-}
-.section2 img{
-    width: 25px;
-    height: auto;
 }
 img{
     vertical-align: middle;
@@ -98,6 +141,113 @@ img{
     color: white;
     font-size: 10px;
     margin: 6px 0;
+}
+.section3{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+.section3 div{
+    display: flex;
+    width: 60%;
+}
+.text{
+    margin-top: 5px;
+    font-size: 30px;
+    font-family: roboto;
+    color: #00b39b;
+    letter-spacing: 1px;
+}
+.logos{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 50px;
+    margin-top: 20px;
+}
+.section4{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #d0faf4;
+    margin-top: 55px;
+    padding-left: 50px;
+}
+.fourth{
+    font-family: work sans;
+    padding-top: 60px;
+}
+.fourth h2{
+    color: #00b39b;
+    padding-left: 50px;
+    font-weight: lighter;
+}
+.fourth p{
+    padding-top: 20px;
+    padding-left: 50px;
+    color: #747474;
+    font-size: 15px;
+    padding-bottom: 50px;
+}
+.fourParts{
+    display: flex;
+    justify-content: space-around;
+    height: 100%;
+    margin-right: 50px;
+    margin-left: 100px;
+}
+.fourParts  div {
+    height: 500px;
+    width: 250px;
+}
+#first, #second{
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    margin-right: 20px;
+}
+#top, #patients, #appointments, #doctors{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 220px;
+    background-color: white;
+    text-align: center;
+    border-radius: 2px;
+    margin-bottom: 20px;
+}
+.fourParts h3{
+    color: #00b39b;
+    font-family:  roboto;
+    font-size: 30px;
+}
+.fourParts p{
+    color: #747474;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    margin-bottom: 10px;
+}
+.section5{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    padding-top: 80px;
+}
+.section5 h3{
+    color: #00b39b;
+    font-family: work sans;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 300;
+}
+.section5 p{
+    text-align: center;
+    color: #747474;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    line-height: 20px;
 }
 .section6{
     display: flex;
@@ -115,8 +265,42 @@ img{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    padding-left: 150px;
+    padding-right: 150px;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
-
+div #buttons{
+    display: flex;
+    justify-content: space-between;
+}
+.section6 p{
+    color: #747474;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-left: 20px;
+    padding-top: 20px;
+    font-size: medium;
+}
+.section6 button{
+    height: 35px;
+    margin-top: 30px;
+    display: flex;
+    gap: 2cm;
+    justify-content: center;
+    background: #3d83df;
+    line-height: 16px;
+    color: #fff;
+    font-weight: 700;
+    text-align: center;
+    border: none;
+    border-radius: 4px;
+    font-size: 10px;
+    font-family: Roboto, Arial, sans-serif;
+    margin-right: 20px;
+    align-items: center;
+    padding-right: 10px;
+    padding-left: 10px;
+}
 .section7{
     display: flex;
     flex-direction: column;
